--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^7.0.1",
     "firebase-admin": "^13.6.0",
     "nodemailer": "^6.9.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
