--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
   ],
   "author": "CS-422 Team",
   "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
