--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,17 +2,20 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Copy package files first (for better Docker layer caching)
+COPY package.json package-lock.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install --omit=dev
 
 # Copy application code
 COPY . .
 
 # Expose port
 EXPOSE 8080
+
+# Set environment to production
+ENV NODE_ENV=production
 
 # Start the application
 CMD ["npm", "start"]
