--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -24,7 +24,23 @@ COPY --from=builder /app/build /usr/share/nginx/html
 # Create startup script that generates nginx config and injects API URL
 RUN echo '#!/bin/sh' > /start.sh && \
     echo 'PORT=${PORT:-80}' >> /start.sh && \
-    echo 'API_URL=${REACT_APP_API_URL:-http://localhost:5000/api}' >> /start.sh && \
+    echo '' >> /start.sh && \
+    echo '# Process API URL - ensure it has protocol and /api suffix' >> /start.sh && \
+    echo 'RAW_API_URL=${REACT_APP_API_URL:-http://localhost:5000/api}' >> /start.sh && \
+    echo '' >> /start.sh && \
+    echo '# Add https:// if no protocol specified' >> /start.sh && \
+    echo 'if echo "$RAW_API_URL" | grep -qvE "^https?://"; then' >> /start.sh && \
+    echo '  RAW_API_URL="https://$RAW_API_URL"' >> /start.sh && \
+    echo 'fi' >> /start.sh && \
+    echo '' >> /start.sh && \
+    echo '# Add /api suffix if not present' >> /start.sh && \
+    echo 'if echo "$RAW_API_URL" | grep -qvE "/api/?$"; then' >> /start.sh && \
+    echo '  # Remove trailing slash if present' >> /start.sh && \
+    echo '  RAW_API_URL=$(echo "$RAW_API_URL" | sed "s|/\$||")' >> /start.sh && \
+    echo '  RAW_API_URL="$RAW_API_URL/api"' >> /start.sh && \
+    echo 'fi' >> /start.sh && \
+    echo '' >> /start.sh && \
+    echo 'API_URL=$RAW_API_URL' >> /start.sh && \
     echo '' >> /start.sh && \
     echo '# Inject API URL into index.html' >> /start.sh && \
     echo 'sed -i "s|REACT_APP_API_URL_PLACEHOLDER|$API_URL|g" /usr/share/nginx/html/index.html' >> /start.sh && \
