--- a/server/.env-example
+++ b/server/.env-example
@@ -21,7 +21,7 @@
 #
 # See DATABASE_SETUP.md for detailed instructions
 DATABASE_URL=postgresql://postgres:password@localhost:5432/flock_manager
-
+TEST_DATABASE_URL=postgresql://[your_username]@localhost:5432/flock_manager_test
 # email info -- to do, follow EMAIL_SETUP.md
 # Email Configuration
 EMAIL_HOST=smtp.gmail.com
